force-app/main/default/objects/SPEN_ResponsibleParty__c/SPEN_ResponsibleParty__c.object-meta.xml
<CustomObject>
    <label>Responsible Party</label>
    <nameField>
        <displayFormat>RP-{0000000}</displayFormat>
        <label>Responsible Party Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Responsible Parties</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>