force-app/main/default/objects/SPEN_ResponsibleParty__c/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <description>CRMD-6634</description>
    <label>Email</label>
    <type>Email</type>
</CustomField>