force-app/main/default/objects/SPEN_ResponsibleParty__c/fields/Mobile__c.field-meta.xml
<CustomField>
    <fullName>Mobile__c</fullName>
    <description>CRMD-6634</description>
    <label>Mobile</label>
    <type>Phone</type>
</CustomField>