force-app/main/default/objects/SPEN_ResponsibleParty__c/fields/Phone__c.field-meta.xml
<CustomField>
    <fullName>Phone__c</fullName>
    <description>CRMD-6634</description>
    <label>Phone</label>
    <type>Phone</type>
</CustomField>