force-app/main/default/objects/SPEN_ResponsibleParty__c/fields/SPEN_Address__c.field-meta.xml
<CustomField>
    <fullName>SPEN_Address__c</fullName>
    <description>CRMD-6634</description>
    <label>Address</label>
    <type>TextArea</type>
</CustomField>