force-app/main/default/objects/SPEN_ResponsibleParty__c/fields/SPEN_Company__c.field-meta.xml
<CustomField>
    <fullName>SPEN_Company__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Company</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 AND (2 OR 3 OR 4)</booleanFilter>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>SPEN Account</value>
        </filterItems>
        <filterItems>
            <field>Account.SPEN_3PD_Responsible_Party__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <filterItems>
            <field>Account.SPEN_Streetworks_Contractor__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <filterItems>
            <field>Account.SPEN_NRSWA_Contractor__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Responsible Parties</relationshipLabel>
    <relationshipName>SPEN_AccountResponsibilityParty</relationshipName>
    <type>Lookup</type>
</CustomField>