force-app/main/default/objects/SPEN_ResponsibleParty__c/fields/SPEN_CompanyAddress__c.field-meta.xml
<CustomField>
    <fullName>SPEN_CompanyAddress__c</fullName>
    <formula>IF( ISPICKVAL( SPEN_Type__c ,&apos;Company&apos;) , SPEN_Company__r.BillingStreet &amp; BR() &amp; SPEN_Company__r.BillingCity &amp; BR() &amp; SPEN_Company__r.BillingState &amp; BR() &amp; SPEN_Company__r.BillingPostalCode &amp; BR() &amp; SPEN_Company__r.BillingCountry ,null)</formula>
    <label>Company Address</label>
    <type>Text</type>
</CustomField>