force-app/main/default/objects/SPEN_ResponsibleParty__c/fields/SPEN_EmailAddress__c.field-meta.xml
<CustomField>
    <fullName>SPEN_EmailAddress__c</fullName>
    <formula>IF( ISPICKVAL( SPEN_Type__c ,&apos;Company&apos;) ,  SPEN_Company__r.SPEN_PartnerEmailaddress__c ,null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Email Address</label>
    <type>Text</type>
</CustomField>