force-app/main/default/objects/SPEN_ResponsibleParty__c/fields/SPEN_FullName__c.field-meta.xml
<CustomField>
    <fullName>SPEN_FullName__c</fullName>
    <formula>First_Name__c + Last_Name__c</formula>
    <label>FullName</label>
    <type>Text</type>
</CustomField>