force-app/main/default/objects/SPEN_ResponsibleParty__c/fields/SPEN_MobileNumber__c.field-meta.xml
<CustomField>
    <fullName>SPEN_MobileNumber__c</fullName>
    <formula>IF( ISPICKVAL( SPEN_Type__c ,&apos;Company&apos;) , SPEN_Company__r.Mobile_Number__c,null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Mobile Number</label>
    <type>Text</type>
</CustomField>