force-app/main/default/objects/SPEN_ResponsibleParty__c/fields/SPEN_Person__c.field-meta.xml
<CustomField>
    <fullName>SPEN_Person__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Person</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>SPEN_ContactResponsibilityParty</relationshipName>
    <type>Lookup</type>
</CustomField>