force-app/main/default/objects/SPEN_ResponsibleParty__c/fields/SPEN_Primary__c.field-meta.xml
<CustomField>
    <fullName>SPEN_Primary__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Primary</label>
    <type>Checkbox</type>
</CustomField>