force-app/main/default/objects/SPEN_ResponsibleParty__c/fields/SPEN_Primary_Validation__c.field-meta.xml
<CustomField>
    <fullName>SPEN_Primary_Validation__c</fullName>
    <defaultValue>false</defaultValue>
    <description>CRMD-6634, Boolean Flag to throw validation when more than 1 primary is checked for Responsible Party. 
This field is used in Flow to trigger the validation.</description>
    <label>Primary Validation</label>
    <type>Checkbox</type>
</CustomField>