force-app/main/default/objects/SPEN_ResponsibleParty__c/fields/SPEN_Type__c.field-meta.xml
<CustomField>
    <fullName>SPEN_Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Company</fullName>
            </value>
            <value>
                <fullName>Person</fullName>
            </value>
            <value>
                <fullName>Employee</fullName>
                <isActive>false</isActive>
                <label>Employee</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>