force-app/main/default/objects/SPEN_ResponsibleParty__c/validationRules/Blank_Company_Error_For_Company_Type.validationRule-meta.xml
<ValidationRule>
    <fullName>Blank_Company_Error_For_Company_Type</fullName>
    <active>true</active>
    <description>CRMD-6634, Company Lookup should not be blank if Type = Company</description>
    <errorConditionFormula>AND(ISPICKVAL(SPEN_Type__c , &apos;Company&apos;), SPEN_Company__c =&apos;&apos;)</errorConditionFormula>
    <errorMessage>Company Lookup should not be blank if Type = Company</errorMessage>
</ValidationRule>