force-app/main/default/objects/SPEN_ResponsibleParty__c/validationRules/BlankFirstAndLastNameForPersonType.validationRule-meta.xml
<ValidationRule>
    <fullName>BlankFirstAndLastNameForPersonType</fullName>
    <active>true</active>
    <description>CRMD-6634,First Name and Last Name should not be blank if Type = Person</description>
    <errorConditionFormula>AND(ISPICKVAL(SPEN_Type__c , &apos;Person&apos;),  OR(First_Name__c  =&apos;&apos;, Last_Name__c =&apos;&apos;))</errorConditionFormula>
    <errorMessage>First Name and Last Name should not be blank if Type = Person</errorMessage>
</ValidationRule>