force-app/main/default/objects/SPEN_ResponsibleParty__c/validationRules/CompanyNotBlankErrorForPersonType.validationRule-meta.xml
<ValidationRule>
    <fullName>CompanyNotBlankErrorForPersonType</fullName>
    <active>true</active>
    <description>CRMD - 6634, Company should be blank if Type = Person</description>
    <errorConditionFormula>AND(ISPICKVAL(SPEN_Type__c , &apos;Person&apos;), NOT(SPEN_Company__c =&apos;&apos;))</errorConditionFormula>
    <errorMessage>Company should be blank if Type = Person</errorMessage>
</ValidationRule>