force-app/main/default/objects/SPEN_ResponsibleParty__c/validationRules/FirstAndLastNameErrorForCompanyType.validationRule-meta.xml
<ValidationRule>
    <fullName>FirstAndLastNameErrorForCompanyType</fullName>
    <active>true</active>
    <description>CRMD-6634,First Name and Last Name should be blank if Type = Company</description>
    <errorConditionFormula>AND(ISPICKVAL(SPEN_Type__c , &apos;Company&apos;),  OR(NOT(First_Name__c  =&apos;&apos;), NOT(Last_Name__c =&apos;&apos;)))</errorConditionFormula>
    <errorMessage>First Name and Last Name should be blank if Type = Company</errorMessage>
</ValidationRule>