force-app/main/default/objects/SPEN_ResponsibleParty__c/validationRules/MultiplePrimaryResponsiibilityPartyError.validationRule-meta.xml
<ValidationRule>
    <fullName>MultiplePrimaryResponsiibilityPartyError</fullName>
    <active>true</active>
    <description>CRMD-6634, To throw validation when more than 1 primary is checked for Responsible Party.</description>
    <errorConditionFormula>AND(SPEN_Case__r.RecordType.DeveloperName =&apos;SPEN_ThirdPartyDamage&apos;,SPEN_Primary_Validation__c =true)</errorConditionFormula>
    <errorMessage>Primary Responsible Party already exists</errorMessage>
</ValidationRule>